--- a/front-end/Style/style.css
+++ b/front-end/Style/style.css
@@ -1,40 +1,50 @@
 * {
-	margin: 0;
-	padding: 0;
-	border: none;
-	box-sizing: border-box;
-	font-family: Roboto;
+  margin: 0;
+  padding: 0;
+  border: none;
+  box-sizing: border-box;
+  font-family: Roboto;
 }
 
 .form-width {
-	width: 1250px;
+  width: 1250px;
 }
 
 #map {
-	height: 480px;
-	width: 100%;
-	background-color: #1f1e1e;
-	margin: 0;
+  height: 480px;
+  width: 100%;
+  background-color: #1f1e1e;
+  margin: 0;
 }
 
 .navbar {
-	background-color: rgb(203, 198, 198) !important;
-	padding: 25px 0;
+  background-color: rgb(203, 198, 198) !important;
+  padding: 25px 0;
 }
 
 #navbar-img {
-	height: 30px;
-	top: 15px;
-	padding-left: 10px;
+  height: 30px;
+  top: 15px;
+  padding-left: 10px;
 }
 
 @media (max-width: 768px) {
-	#navbarSupportedContent ul * {
-		width: 100%;
-		text-align: center;
-	}
+  #navbarSupportedContent ul * {
+    width: 100%;
+    text-align: center;
+  }
 }
 
 #navbar-img {
-	height: 70px;
+  height: 70px;
+}
+
+.updates {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.add-btn {
+  margin-top: 5px;
 }
